--- a/src/app/posts/post-create/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create/post-create.component.html
@@ -1,6 +1,10 @@
 <mat-card>
     <mat-form-field>
-        <textarea matInput cols="30" rows="6" [value]="newPost" [(ngModel)]="enteredValue"></textarea>
+        <input matInput type="text" [(ngModel)]="enteredTitle">
+    </mat-form-field>
+
+    <mat-form-field>
+        <textarea matInput cols="30" rows="6" [value]="newPost" [(ngModel)]="enteredContent"></textarea>
     </mat-form-field>
 
     <button mat-raised-button (click)="onAddPost()" color="accent">Save Post</button>
