--- a/src/app/posts/post-list/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list/post-list.component.html
@@ -1,8 +1,9 @@
-<mat-accordion>
-    <mat-expansion-panel>
+<mat-accordion multi="true" *ngIf="posts.length > 0">
+    <mat-expansion-panel *ngFor="let post of posts">
         <mat-expansion-panel-header>
-            Expansion Title
+            {{ post.title }}
         </mat-expansion-panel-header>
-        <p>I'm in an expansion panel!</p>
+        <p>{{ post.content }}</p>
     </mat-expansion-panel>
 </mat-accordion>
+<p *ngIf="posts.length <=0" class="info-text mat-body-1">No posts yet.</p>
