--- a/src/app/posts/post-create/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create/post-create.component.html
@@ -1,11 +1,20 @@
 <mat-card>
-    <mat-form-field>
-        <input matInput type="text" [(ngModel)]="enteredTitle">
-    </mat-form-field>
+    <form (submit)="onAddPost(postForm)" #postForm="ngForm">
+        <mat-form-field>
+            <input matInput type="text" name="title" ngModel required minlength="3" #title="ngModel">
+            <mat-error *ngIf="title.invalid">
+                Please enter a post title.
+            </mat-error>
+        </mat-form-field>
 
-    <mat-form-field>
-        <textarea matInput cols="30" rows="6" [value]="newPost" [(ngModel)]="enteredContent"></textarea>
-    </mat-form-field>
+        <mat-form-field>
+            <textarea matInput cols="30" rows="6" [value]="newPost" name="content" ngModel required #content="ngModel">
+            </textarea>
+            <mat-error *ngIf="title.invalid">
+                Please enter a post title.
+            </mat-error>
+        </mat-form-field>
 
-    <button mat-raised-button (click)="onAddPost()" color="accent">Save Post</button>
+        <button mat-raised-button type="submit" color="accent">Save Post</button>
+    </form>
 </mat-card>
