--- a/src/app/posts/post-create/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create/post-create.component.html
@@ -1,14 +1,16 @@
 <mat-card>
     <form (submit)="onAddPost(postForm)" #postForm="ngForm">
         <mat-form-field>
-            <input matInput type="text" name="title" ngModel required minlength="3" #title="ngModel">
+            <input matInput type="text" name="title" ngModel required minlength="3" #title="ngModel"
+                placeholder="Post title">
             <mat-error *ngIf="title.invalid">
                 Please enter a post title.
             </mat-error>
         </mat-form-field>
 
         <mat-form-field>
-            <textarea matInput cols="30" rows="6" [value]="newPost" name="content" ngModel required #content="ngModel">
+            <textarea matInput cols="30" rows="6" [value]="newPost" name="content" ngModel required #content="ngModel"
+                placeholder="Post content">
             </textarea>
             <mat-error *ngIf="title.invalid">
                 Please enter a post title.
